--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,28 @@
-pyrogram>=0.8.0
-urbandict>=0.5
+pyrogram
+bs4
+colorama
+requests
+aioify
+instantmusic
+youtube-dl
+pexpect
+wget
+python-dotenv
+Pillow
+gsearch
+regex
+urbandict
+hachoir
+wikipedia
+ffmpeg
+progressbar2
+tqdm
+logger
+tldextract
+pyaxmlparser
+hurry.filesize 
+pget 
+aiohttp
+python-magic
+
 Tgcrypto
