--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pyrogram
+pyrogram[fast]
 youtube-dl
 pexpect
 wget
@@ -20,3 +20,4 @@ pget
 aiohttp
 python-magic
 Tgcrypto
+git+git://github.com/google/chatbase-python.git
