Removed useless requirements...

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,10 @@
 pyrogram[fast]
-youtube-dl
-pexpect
-wget
-Pillow
-gsearch
-regex
-urbandict
-hachoir
-ffmpeg
-progressbar2
-logger
-tldextract
-pyaxmlparser
-hurry.filesize 
-pget 
-aiohttp
-python-magic
 Tgcrypto
-pytube
-certifi
+youtube-dl
+Pillow
+hachoir
+ffmpeg-python
+logger
+pget 
+python-magic
+requests
